<resources>
    <string name="app_name">SporTEC</string>
    <!-- Strings FB login -->
    <string name="facebook_app_id">435874526835129</string>
    <string name="fb_login_protocol_scheme">fb435874526835129</string>

    <!-- Navigation Meny-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="noticias">Noticias</string>

    <!-- menu slide -->
    <string name="cerrar_session_menu_slice">Salir</string>
    <string name="login">Cerrar sesion</string>
    <string name="username">USERNAME</string>
    <string name="perfil">Perfil</string>
    <string name="deportes">Deportes</string>

    <!-- Registro activity -->
    <string name="registro_activity_str_nombre">Nombre</string>
    <string name="registro_activity_str_apellido">Apellido</string>
    <string name="registro_activity_str_email">Email</string>
    <string name="registro_activity_str_foto">Foto</string>
    <string name="registro_activity_str_agregar_foto">Agregar Foto</string>
    <string name="registro_activity_str_registrarse">Registrarse</string>
    <string name="registro_activity_str_password">Password</string>

    <!-- Perfil usuario fragment -->
    <string name="perfil_usuario_str_guardar_cambios">Guardar Cambios</string>
    <string name="perfil_usuario_str_editar_deportes">Editar Deportes</string>

    <!-- Equipo fragment -->
    <string name="equipo_miembros_">Miembros</string>
    <string name="equipo_vacio">No tenes un equipo, pero podes crear uno!</string>
    <string name="equipo_vacio_boton">Crear Equipo</string>

    <!-- Crear Equipo fragment -->
    <string name="crear_equipo_nombre_equipo">Nombre del equipo</string>
    <string name="crear_equipo_descripcion_equipo">Descripcion del equipo</string>
    <string name="crear_equipo_boton_crear">Crear equipo</string>
    <string name="crear_equipo_foto">Foto</string>
    <string name="crear_equipo_boton_foto">Agregar Foto</string>


</resources>
